samples/_failures_safe/1761242821_d111c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_210950c7.c: In function ‘main’:
./samples/SAFE/__tmp_210950c7.c:144:16: error: missing terminating " character
  144 |         printf("Failed to read second matrix
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_210950c7.c:144:9: error: expected expression at end of input
  144 |         printf("Failed to read second matrix
      |         ^~~~~~
./samples/SAFE/__tmp_210950c7.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_210950c7.c:144:9: error: expected declaration or statement at end of input
